# advent-of-code-2024

./: .editorconfig  .gitignore  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
rust/: Cargo.toml  README.md  build.rs
rust/src/: main.rs
rust/src/core/: grid.rs  lib.rs  path_find.rs  project.rs
rust/src/puzzle13/: main.rs
rust/src/puzzle15/: main.rs
rust/src/puzzle16/: main.rs
rust/src/puzzle17/: main.rs
rust/src/puzzle18/: main.rs
rust/src/puzzle19/: main.rs
rust/src/puzzle20/: main.rs
rust/src/puzzle21/: main.rs
rust/src/puzzle22/: main.rs
rust/src/puzzle23/: main.rs
rust/src/puzzle24/: main.rs
rust/src/puzzle25/: main.rs
src/: puzzle01.mts  puzzle02.mts  puzzle03.mts  puzzle04.mts  puzzle05.mts  puzzle06.mts  puzzle07.mts  puzzle08.mts  puzzle09.mts  puzzle10.mts  puzzle11.mts  puzzle12.mts  puzzle13.mts  puzzle14.mts
src/browser/: day06.html  day06.tsx  index.html  tsconfig.browser.json  vite.config.mjs
src/browser/canvas/: canvas.module.css  canvasApi.ts  events.ts  geometry.ts  index.ts  paper.tsx  paperArea.tsx  renderingState.ts  scheduler.ts
src/browser/day06/: day06.html  day06.module.css  day06.tsx
src/core/: grid.mts  linkedList.mts  math.mts  performance.mts  project.mts
