[package]
name = "alexeymz-advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
fplist = "0.2.1"
priority-queue = "2.1.1"
regex = "1.11.1"
z3 = { version = "0.12.1", optional = true }
z3-sys = { version = "0.8.1", optional = true }

[features]
z3 = ["dep:z3", "dep:z3-sys"]

[lib]
name = "core"
path = "src/core/lib.rs"

[[bin]]
name = "puzzle13"
path = "src/puzzle13/main.rs"
required-features = ["z3"]

[[bin]]
name = "puzzle15"
path = "src/puzzle15/main.rs"

[[bin]]
name = "puzzle16"
path = "src/puzzle16/main.rs"

[[bin]]
name = "puzzle17"
path = "src/puzzle17/main.rs"

[[bin]]
name = "puzzle18"
path = "src/puzzle18/main.rs"

[[bin]]
name = "puzzle19"
path = "src/puzzle19/main.rs"

[[bin]]
name = "puzzle20"
path = "src/puzzle20/main.rs"

[[bin]]
name = "puzzle21"
path = "src/puzzle21/main.rs"

[[bin]]
name = "puzzle22"
path = "src/puzzle22/main.rs"

[[bin]]
name = "puzzle23"
path = "src/puzzle23/main.rs"

[[bin]]
name = "puzzle24"
path = "src/puzzle24/main.rs"
